--- a/style.css
+++ b/style.css
@@ -3,12 +3,14 @@ body{
     color:white;
     padding:20 px;
     margin-top:auto;
+padding-left:20%;
+    padding-right:10%;
 }
 #imagem-fundo{
     background: url('xiamen-824233_1280.jpg');
-    height: 100%;
+    height: 300px ;
     text-align: center;
-    background-image: cover;
+    background-size: cover;
 }
 html,body{
     margin: 0;
@@ -77,8 +79,13 @@ section{
 footer{
 text-align: left;
 padding: 20px;
+color:white;
+    background-color:rgba(20, 22, 43, 0.226);
+    outline-color: white;
+    text-align: center;
 
 }
 .destaque{
 text-align: left;
 }
+
