--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     background-color:rgba(0, 0, 0, 0.788);
     color:white;
     padding:20 px;
-    
+    margin-top:auto;
     
 }
 #imagem-fundo{
@@ -20,7 +20,7 @@ html,body{
     color:white;
     padding-top: 20%;
     font-size: 50px;
-    line-height:0.6;
+    line-height:0.4;
     
 } 
 #subtitulo{
